--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -6,32 +6,44 @@
 
 <body>
 
-<h1>register form</h1>
 
-<form actin="result.html" th:action="@{/register01}" method="post">
+<h3>register form</h3>
+<form actin="result.html" th:action="@{/register}" method="post">
     userId : <input type="text" name="userId" value="leejusu"><br>
     password : <input type="text" name="password" value="passowrd"><br>
 
-    <input type="submit" value="register01">
+    <input type="submit" value="register">
 </form>
-<form actin="result.html" th:action="@{/register02}" method="post">
-    userId : <input type="text" name="userId" value="leejusu"><br>
-    password : <input type="text" name="password" value="passowrd"><br>
 
-    <input type="submit" value="register02">
-</form>
-<form actin="result.html" th:action="@{/register03}" method="post">
-    userId : <input type="text" name="userId" value="leejusu"><br>
-    password : <input type="text" name="password" value="passowrd"><br>
 
-    <input type="submit" value="register03">
-</form>
-<form actin="result.html" th:action="@{/register04}" method="post">
-    userId : <input type="text" name="userId" value="leejusu"><br>
-    password : <input type="text" name="password" value="passowrd"><br>
 
-    <input type="submit" value="register04">
-</form>
+
+<!--<h1>register form</h1>-->
+
+<!--<form actin="result.html" th:action="@{/register01}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejusu"><br>-->
+<!--    password : <input type="text" name="password" value="passowrd"><br>-->
+
+<!--    <input type="submit" value="register01">-->
+<!--</form>-->
+<!--<form actin="result.html" th:action="@{/register02}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejusu"><br>-->
+<!--    password : <input type="text" name="password" value="passowrd"><br>-->
+
+<!--    <input type="submit" value="register02">-->
+<!--</form>-->
+<!--<form actin="result.html" th:action="@{/register03}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejusu"><br>-->
+<!--    password : <input type="text" name="password" value="passowrd"><br>-->
+
+<!--    <input type="submit" value="register03">-->
+<!--</form>-->
+<!--<form actin="result.html" th:action="@{/register04}" method="post">-->
+<!--    userId : <input type="text" name="userId" value="leejusu"><br>-->
+<!--    password : <input type="text" name="password" value="passowrd"><br>-->
+
+<!--    <input type="submit" value="register04">-->
+<!--</form>-->
 
 
 
