타임 리프 표현식

--- a/src/main/resources/templates/home0101.html
+++ b/src/main/resources/templates/home0101.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<h1>Home0201</h1>
-<h1 th:text="${msg}">greeting</h1>
+<h1>Home0101</h1>
+<h1 th:text="#{welcome.message}">greeting</h1>
 </body>
 </html>
