--- a/src/main/resources/templates/home0401.html
+++ b/src/main/resources/templates/home0401.html
@@ -4,7 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<h1>Home0201</h1>
-<h1 th:text="${msg}">greeting</h1>
+<h1>home0401</h1>
+<div>
+    <a href="./sub/home0402.html" th:href="@{/sub/home0402}">home0402로 이동</a>
+</div>
 </body>
 </html>
