--- a/src/main/resources/templates/home0501.html
+++ b/src/main/resources/templates/home0501.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<h1>Home0201</h1>
-<h1 th:text="${msg}">greeting</h1>
+<h1>home0501</h1>
+    <h1 th:text="'hello world!'">greeting</h1>
 </body>
 </html>
