--- a/src/main/resources/templates/home0202.html
+++ b/src/main/resources/templates/home0202.html
@@ -4,5 +4,30 @@
 </head>
 <body>
 <h1>Home0202</h1>
+
+<table border="1">
+
+    <tr>
+        <td>${member.userId}</td>
+        <td th:text="${member.userId}">userId</td>
+    </tr>
+    <tr>
+        <td>${member.password}</td>
+        <td th:text="${member.password}">password</td>
+    </tr>
+    <tr>
+        <td>${member.userName}</td>
+        <td th:text="${member.userName}">userName</td>
+    </tr>
+    <tr>
+        <td>${member.email}</td>
+        <td th:text="${member.email}">email</td>
+    </tr>
+    <tr>
+        <td>${member.dateOfBirth}</td>
+        <td th:text="${member.dateOfBirth}">dateOfBirth</td>
+    </tr>
+
+</table>
 </body>
 </html>
